refactor: add automation indirection for CI

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -19,6 +19,9 @@ includes:
    autopatchpubsub:
       taskfile: ./src/autopatchpubsub/Taskfile.yml
       dir: ./src/autopatchpubsub
+   autopatchshared:
+      taskfile: ./src/autopatchshared/Taskfile.yml
+      dir: ./src/autopatchshared
 
 tasks:
    create-docker-network:
@@ -76,6 +79,7 @@ tasks:
         - "echo 'Installing package dependencies...'"
         - task: build-install-datatypes
       #   - task: build-install-facades
+        - task: build-install-shared
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchshared/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - task: fuzzing-service:install
