hotfix(pre-release): remove autopatchpubsub wheel 'deploy' step from dev build as that component is still in Code Review

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -69,7 +69,7 @@ tasks:
         - task: build-install-datatypes
       #   - task: build-install-facades
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
-        - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+      #   - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - task: fuzzing-service:install
         # - task llm-dispatch:install
         # - task patch-request-generator-component:install
