Feature/evaluation-service (#24)
* gitignore for my test stuff

* Update gitignore and the quickstart guide with some instructions for fuzzing in the CLI

* Creation of the evaluation service script.

* gitignore

* updates to gitignore and taskfile

* updated metric and logging

* commented and organized

* removed the address sanitizer

* minor changes

* updated signal number for logging

* gitignore for my test stuff

* Update gitignore and the quickstart guide with some instructions for fuzzing in the CLI

* Creation of the evaluation service script.

* gitignore

* updates to gitignore and taskfile

* updated metric and logging

* commented and organized

* removed the address sanitizer

* minor changes

* updated signal number for logging

* gitignore for my test stuff

* Update gitignore and the quickstart guide with some instructions for fuzzing in the CLI

* Creation of the evaluation service script.

* updated metric and logging

* commented and organized

* removed the address sanitizer

* minor changes

* updated signal number for logging

* Creation of the evaluation service script.

* updates to gitignore and taskfile

* Feature/patch eval structured logging and config (#34)

* Add structured logging and injected configuration to patch evaulation service component

* remove unused code

* update prod config for patch eval

* re-add the assets and bin from main branch rebase

* deleted old eval service script and added eval service gitignore

* remove seed_input directory from assets and move to src/fuzzing_service

* moved the input for the demo into lily-demo-1/input

* updated the eval service with logging and input from json

* updated taskfiles, dev-config in eval service

* minor tweaks

* updated for file input

* update to result logging

* beginning test suite

* small changes for logging

* updates to read me and task file

* update to patch success/partial success/failure designation in results file

* Updates to readme and config.json with 

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,6 +13,9 @@ includes:
    autopatchdatatypes:
       taskfile: ./src/autopatchdatatypes/Taskfile.yml
       dir: ./src/autopatchdatatypes
+   patch-evaluation-service:
+      taskfile: ./src/patch-evaluation-service/Taskfile.yml
+      dir: ./src/patch-evaluation-service
    autopatchpubsub:
       taskfile: ./src/autopatchpubsub/Taskfile.yml
       dir: ./src/autopatchpubsub
@@ -47,9 +50,8 @@ tasks:
    lint:
       desc: Run linter
       cmds:
-        - "echo 'Running linter...'"
-        - "echo Not Yet Implemented"
-        # - task: fuzzing-service:lint
+      - "echo 'Running linter...'"
+      - "echo Not Yet Implemented"
    build-install-datatypes:
       desc: Build and install datatypes package
       cmds:
@@ -77,4 +79,3 @@ tasks:
         # - task report-generaation:install
         # - task patch-evaluation-service:install
         # - task prompt-evaluation-service:install
-
