--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,14 @@
             "program": "/workspace/AutoPatch-LLM/src/fuzzing-service/fuzzing_service.py",
             "console": "integratedTerminal",
             "envFile": "/workspace/AutoPatch-LLM/src/fuzzing-service/.env",
+        },
+        {
+            "name": "Python Debugger: AutoPatch Patch Evaluation Service",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/workspace/AutoPatch-LLM/src/patch-evaluation-service/patch_evaluation_service.py",
+            "console": "integratedTerminal",
+            "envFile": "/workspace/AutoPatch-LLM/src/patch-evaluation-service/.env",
         }
     ]
 }
