feature(logging_init): add autopatchshared for logging init to patch-eval component

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,9 +37,6 @@ tasks:
         - task: create-docker-network
         - task: autopatch:install-devtools
         - task: install-package-dependencies
-      # - task: fuzzing-service:install-devtools
-      # - task: llm-dispatch:install-devtools
-      # - task: autopatchdatatypes:install-devtools
    test-with-coverage:
       desc: Run tests with coverage
       cmds:
@@ -61,18 +58,24 @@ tasks:
         - "echo 'Building datatypes...'"
         - task: autopatchdatatypes:build
         - task: autopatchdatatypes:install
+        - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+        - cp ./src/autopatchdatatypes/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
    build-install-facades:
       desc: Build and install
       cmds:
         - "echo 'Building message broker facade...'"
         - task: autopatchpubsub:build
         - task: autopatchpubsub:install
+      #   - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+      #   - cp ./src/autopatchpubsub/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
    build-install-shared:
       desc: Build and install shared modules package
       cmds:
         - "echo 'Building shared modules...'"
         - task: autopatchshared:build
         - task: autopatchshared:install
+        - cp ./src/autopatchshared/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+        - cp ./src/autopatchshared/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
    install-package-dependencies:
       desc: Install package dependencies
       cmds:
@@ -80,8 +83,6 @@ tasks:
         - task: build-install-datatypes
       #   - task: build-install-facades
         - task: build-install-shared
-        - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
-        - cp ./src/autopatchshared/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - task: fuzzing-service:install
         # - task llm-dispatch:install
         # - task patch-request-generator-component:install
