refactor(logging): extract logging init code into shared module for p… (#62)
* refactor(logging): extract logging init code into shared module for patch evaluation component and llm dispatch component

* refactor: add automation indirection for CI

* uprev datatypes package

* refactor(lint): apply linter suggestions to new module

* tests: move init logging tests to its own module

* Update src/autopatchshared/autopatchshared/test_init_logging.py

apply linter suggestions

* Update src/autopatchshared/autopatchshared/test_init_logging.py

apply linter suggestions

* Update test_fuzzing_service.py

  flake8: F401 'unittest.mock.mock_open' imported but unused

* Update src/autopatchshared/autopatchshared/test_init_logging.py

apply isort suggestions

* refactor(typing): add typing to test_init_logging

* feature(logging_init): add autopatchshared for logging init to patch-eval component

* feature(logging_init): typo fix

* lint(patch_eval): run flake8, isort, black

* lint(CI): run linting only once not twice per PR commit push

* lint(CI): apply CI isort lint suggestions

* Delete src/autopatchshared/autopatchshared/observability.py

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -19,6 +19,9 @@ includes:
    autopatchpubsub:
       taskfile: ./src/autopatchpubsub/Taskfile.yml
       dir: ./src/autopatchpubsub
+   autopatchshared:
+      taskfile: ./src/autopatchshared/Taskfile.yml
+      dir: ./src/autopatchshared
 
 tasks:
    create-docker-network:
@@ -34,9 +37,6 @@ tasks:
         - task: create-docker-network
         - task: autopatch:install-devtools
         - task: install-package-dependencies
-      # - task: fuzzing-service:install-devtools
-      # - task: llm-dispatch:install-devtools
-      # - task: autopatchdatatypes:install-devtools
    test-with-coverage:
       desc: Run tests with coverage
       cmds:
@@ -58,20 +58,31 @@ tasks:
         - "echo 'Building datatypes...'"
         - task: autopatchdatatypes:build
         - task: autopatchdatatypes:install
+        - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+        - cp ./src/autopatchdatatypes/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
    build-install-facades:
       desc: Build and install
       cmds:
         - "echo 'Building message broker facade...'"
         - task: autopatchpubsub:build
         - task: autopatchpubsub:install
+      #   - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+      #   - cp ./src/autopatchpubsub/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
+   build-install-shared:
+      desc: Build and install shared modules package
+      cmds:
+        - "echo 'Building shared modules...'"
+        - task: autopatchshared:build
+        - task: autopatchshared:install
+        - cp ./src/autopatchshared/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+        - cp ./src/autopatchshared/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
    install-package-dependencies:
       desc: Install package dependencies
       cmds:
         - "echo 'Installing package dependencies...'"
         - task: build-install-datatypes
       #   - task: build-install-facades
-        - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
-      #   - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
+        - task: build-install-shared
         - task: fuzzing-service:install
         # - task llm-dispatch:install
         # - task patch-request-generator-component:install
