--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -6,12 +6,14 @@ on:
   push:
     branches:
       - "main"
+      - "bugfix/pre-release-wheels"
 
 permissions:
   contents: write
 
 env:
   PYTHON_VERSION: "3.12.3"
+  AUTOPATCH_VERSION: "0.3.0"
 
 jobs:
   pre-release:
@@ -48,11 +50,11 @@ jobs:
       - name: Install test module
         run: |
           task install-package-dependencies
-      - name: Create JSON config file
+      - name: Create fuzzing component JSON config file
         run: |
-          cat <<EOF > config.json
+          cat <<EOF > fuzzing-service-config.json
           {
-              "version": "0.2.0",
+              "version": "${{ env.AUTOPATCH_VERSION }}",
               "appname": "autopatch.fuzzing-service",
               "logging_config" : "${{ github.workspace }}/src/fuzzing-service/config/logging-config.json",
               "concurrency_threshold": 10,
@@ -76,11 +78,36 @@ jobs:
               "iconv_tool_timeout": 120
           }
           EOF
-      - name: Verify JSON file
-        run: cat config.json
+      - name: Create patch evaluation component JSON config file
+        run: |
+          cat <<EOF > patch-evaluation-service-config.json
+          {
+              "version": "${{ env.AUTOPATCH_VERSION }}",
+              "appname": "autopatch.patch-evaluation-service",
+              "logging_config" : "${{ github.workspace }}/src/patch-evaluation-service/logging-config.json",
+              "crashes_events":"${{ github.workspace }}/src/patch-evaluation-service/crash_events",
+              "patch_eval_results":"${{ github.workspace }}/src/patch-evaluation-service/data",
+              "patched_codes_path":"${{ github.workspace }}/src/patch-evaluation-service/patched_codes",
+              "executables_path":"${{ github.workspace }}/src/patch-evaluation-service/bin/executables",
+              "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
+              "temp_crashes_path":"${{ github.workspace }}src/patch-evaluation-service/temp_crashes_files",
+              "compile_timeout":10,
+              "run_timeout":10,
+              "message_broker_host": "mosquitto",
+              "message_broker_port": 1883,
+              "autopatch_crash_detail_input_topic": "autopatch/crash_detail"
+          }
+          EOF
+      - name: Verify Fuzzing Service Config JSON file
+        run: |
+          cat fuzzing-service-config.json
+      - name: Verify Patch Evaluation Service Config JSON file
+        run: |
+          cat patch-evaluation-service-config.json
       - name: Run Tests
         env:
-          FUZZ_SVC_CONFIG: ${{ github.workspace}}/config.json
+          FUZZ_SVC_CONFIG: ${{ github.workspace}}/fuzzing-service-config.json
+          PATCH_EVAL_SVC_CONFIG: ${{ github.workspace}}/patch-evaluation-service-config.json
         run: |
           task test
       - name: Automatic Releases
@@ -91,5 +118,7 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            **/*.whl
-            **/autopatchdatatypes-*.tar.gz
+            ${{ github.workspace }}/src/autopatchdatatypes/dist/autopatchdatatypes-${{ env.AUTOPATCH_VERSION }}-py3-none-any.whl
+            ${{ github.workspace }}/src/autopatchdatatypes/dist/autopatchdatatypes-${{ env.AUTOPATCH_VERSION }}.tar.gz
+            ${{ github.workspace }}/src/autopatchshared/dist/autopatchshared-${{ env.AUTOPATCH_VERSION }}-py3-none-any.whl
+            ${{ github.workspace }}/src/autopatchshared/dist/autopatchshared-${{ env.AUTOPATCH_VERSION }}.tar.gz
