--- a/src/autopatchpubsub/Dockerfile
+++ b/src/autopatchpubsub/Dockerfile
@@ -1,3 +1,4 @@
+# This file is a developement tool and example code only and can be used to test the MQTT broker.
 FROM ubuntu:noble AS base
 
 ENV PYTHONUNBUFFERED=1
