--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ services:
       - ./src/patch-evaluation-service/config:/app/config:ro
       - ./src/patch-evaluation-service/log:/app/log:rw
       - ./src/patch-evaluation-service/data:/app/data:rw
+      - ./src/patch-evaluation-service/bin:/app/bin:rw
+      - ./src/patch-evaluation-service/crash_events:/app/crash_events:rw
+      - ./src/patch-evaluation-service/patched_codes:/app/patched_codes:rw
     working_dir: /app
   mosquitto:
     image: eclipse-mosquitto:2.0.20
