--- a/src/autopatchpubsub/Taskfile.yml
+++ b/src/autopatchpubsub/Taskfile.yml
@@ -1,7 +1,26 @@
 version: '3'
 
+env:
+  ARGS: --break-system-packages # Use this If you are installing packages using the Taskfile Extension for VSCode UI and devcontainer
+
 tasks:
+  build:
+    desc: build autopatchpubsub
+    cmds:
+      - pip install -r requirements.txt --break-system-packages
+      - python -m build
   install:
     desc: install autopatchpubsub
     cmds:
-      - pip install -r requirements.txt --break-system-packages
+      - pip install {{.CLI_ARGS}} $ARGS ./dist/*.whl
+  uninstall:
+    desc: uninstall autopatchpubsub
+    cmds:
+      - pip uninstall autopatchpubsub-*-py3-none-any.whl --break-system-packages
+  clean:
+    desc: Clean AutoPatch pubsub
+    cmds:
+      - echo "Cleaning AutoPatch pubsub"
+      - rm -rf ./dist
+      - rm -rf ./build
+      - rm -rf ./autopatchpubsub.egg-info
