--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           cat <<EOF > fuzzing-service-config.json
           {
-              "version": "${{ env.AUTOPATCH_VERSION }}",
+              "version": "CItestonlyversion",
               "appname": "autopatch.fuzzing-service",
               "logging_config" : "${{ github.workspace }}/src/fuzzing-service/config/logging-config.json",
               "concurrency_threshold": 10,
@@ -99,10 +99,10 @@ jobs:
           EOF
       - name: Verify Fuzzing Service Config JSON file
         run: |
-          cat fuzzing-service-config.json
+          cat ${{ github.workspace }}/fuzzing-service-config.json
       - name: Verify Patch Evaluation Service Config JSON file
         run: |
-          cat patch-evaluation-service-config.json
+          cat ${{ github.workspace }}/patch-evaluation-service-config.json
       - name: Run Tests
         env:
           FUZZ_SVC_CONFIG: ${{ github.workspace}}/fuzzing-service-config.json
