config: use dataclass config type instead of raw dict in fuzz component (#73)
* config: use dataclass config type instead of raw dict in fuzz component

* config: use dataclass config type instead of raw dict in fuzz component

* Update test_load_config_as_json.py

isort reccommendations

* Update fuzzing_service.py

isort reccommendations

* Update test_fuzzing_service.py

isort suggestions

* Update load_config_from_json.py

isort reccommendations

* config: copy class into docker container for fuzz component

* ignore flake8 flag

--- a/src/fuzzing-service/Dockerfile
+++ b/src/fuzzing-service/Dockerfile
@@ -21,12 +21,13 @@ RUN groupadd -r appuser && \
 
 COPY requirements.txt .
 
-COPY autopatchshared-0.3.0-py3-none-any.whl .
-COPY autopatchdatatypes-0.3.0-py3-none-any.whl .
-COPY autopatchpubsub-0.3.0-py3-none-any.whl .
+COPY autopatchshared-0.3.1-py3-none-any.whl .
+COPY autopatchdatatypes-0.3.1-py3-none-any.whl .
+COPY autopatchpubsub-0.3.1-py3-none-any.whl .
 
 RUN pip install --break-system-packages --user --no-cache-dir -r requirements.txt
 
+COPY fuzz_svc_config.py /app/fuzz_svc_config.py
 COPY fuzzing_service.py /app/fuzzing_service.py
 
 RUN chown -R appuser:appuser /app
