work-in-progress: integrate patch eval component

--- a/src/patch-evaluation-service/Taskfile.yml
+++ b/src/patch-evaluation-service/Taskfile.yml
@@ -1,6 +1,10 @@
 version: '3'
 
 tasks:
+  install:
+    desc: install autopatch-patch-evaluation-service
+    cmds:
+      - pip install -r requirements.txt --break-system-packages
   run:
     desc: run autopatch-patch-evaluation-service
     dotenv: [".env"]
