--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -6,7 +6,9 @@
     "patch_eval_results":"/app/data",
     "patched_codes_path":"/app/patched_codes",
     "executables_path":"/app/bin/executables",
+    "compiler_tool_full_path": "/usr/bin/gcc",
     "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
+    "compiler_feature_flags": "-O1 -g -o",
     "temp_crashes_path":"/app/temp_crashes_files",
     "compile_timeout":10,
     "run_timeout":10,
