--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -84,9 +84,9 @@ tasks:
         - task: build-install-shared
         - task: build-install-facades
         - task: fuzzing-service:install
+        - task: patch-evaluation-service:install
         # - task llm-dispatch:install
         # - task patch-request-generator-component:install
         # - task main:install
         # - task report-generaation:install
-        # - task patch-evaluation-service:install
         # - task prompt-evaluation-service:install
