--- a/src/autopatchpubsub/Dockerfile
+++ b/src/autopatchpubsub/Dockerfile
@@ -1,25 +1,34 @@
 # This file is a developement tool and example code only and can be used to test the MQTT broker.
-FROM ubuntu:noble AS base
+
+FROM alpine:3.21.2 AS base
 
 ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# Install required packages and clean up apt cache
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-        python3=3.12.3-0ubuntu2 \
-        python3-pip=24.0+dfsg-1ubuntu1.1 && \
-    rm -rf /var/lib/apt/lists/*
+RUN addgroup -S appuser && \
+    adduser -S appuser -G appuser && \
+    apk add --no-cache python3=3.12.9-r0
 
-# Create a system group and user named "appuser"
-RUN groupadd -r appuser && \
-    useradd -r -g appuser appuser
+FROM base AS build
 
-COPY requirements.txt /app/requirements.txt
-RUN pip install --break-system-packages --user --no-cache-dir -r /app/requirements.txt
+COPY requirements.txt .
+
+RUN apk add --no-cache \
+    py3-pip=24.3.1-r0
+
+USER appuser
+
+RUN pip install --break-system-packages --user --no-cache-dir -r requirements.txt
+
+FROM base AS runner
+
+COPY --from=build /home/appuser/.local /home/appuser/.local
+
 COPY mqtt-produce-consume.py /app/mqtt-produce-consume.py
 
 RUN chown -R appuser:appuser /app
+
+USER appuser
 
 CMD ["python3", "/app/mqtt-produce-consume.py"]
