--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,17 +8,12 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     rm -f /etc/apt/apt.conf.d/docker-clean && \
     apt-get update && apt-get -y install --no-install-recommends \
         software-properties-common \
-        python3 python3-pip python3-venv && \
+        python3 python3-pip python3-venv \
+        afl++ \
+        gcc-multilib libc6-dev-i386 && \
     add-apt-repository ppa:zhangsongcui3371/fastfetch && \
     apt-get update && apt-get -y install --no-install-recommends \
-        gcc-multilib libc6-dev-i386 \
         fastfetch && \
     apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
-
-# # Install AFL++
-# RUN git clone https://github.com/AFLplusplus/AFLplusplus.git /opt/AFLplusplus \
-#     && cd /opt/AFLplusplus \
-#     && make distrib \
-#     && make install
 
 USER vscode:vscode
