bugfix(devcontainer): make env vars optional and add comments with instructions to developers

--- a/.devcontainer/devcontainer.env.example
+++ b/.devcontainer/devcontainer.env.example
@@ -1,3 +1,7 @@
+# Optional.  To use, add:
+#     "--env-file", ".devcontainer/devcontainer.env"
+# to your "runArgs" array in devcontainer.json
+
 FUZZ_SVC_CONFIG=/workspace/AutoPatch-LLM/src/fuzzing-service/dev-config.json
 OPEN_API_KEY='CHANGE_ME'
 LLAMA_API_KEY='CHANGE_ME'
