--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -81,8 +81,7 @@
 	},
 	"initializeCommand": ["python3", "assets/create-docker-network.py"],
 	"runArgs": [
-		"--network", "autopatch-llm_autopatch-docker-network",
-		"--env-file", ".devcontainer/devcontainer.env"
+		"--network", "autopatch-llm_autopatch-docker-network"
 	],
 	"postCreateCommand": "task autopatch:install-devtools",
 	"postStartCommand": "fastfetch && black --version && coverage --version && echo -n 'isort version: ' && isort --version-number",
